Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -8,23 +8,29 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
 body {
   text-align: center;
+  margin: 0;
 }
 
 header {
   color: #fff;
   background-color: #79756f;
-  padding: .6em;
+  padding: .5em;
   border: 3px solid #595652;
+  margin: 0;
 }
 
 h1 {
-    font-family: 'Bevan', sans-serif;
+  font-family: Bevan, serif;
+  margin: 0;
 }
 
-ul li{
+ul li {
   list-style-type: none;
+  display: inline-block;
+  margin: 0;
 }
 
 a {
@@ -35,14 +41,9 @@ a {
   background-color: #713837;
   padding: .6em;
   border-radius: .75em;
-  margin: .3em;
+  margin-bottom: .3em;
 }
 
 a:hover {
   background-color: #f33;
 }
-
-
-- *Colours:* `#fff`, `#79756f`, `#595652`, `#713837`, `#f33`, `#dbd6cf`
-- *Paddings:* `.6em`, `.5em .75em`
-- *Margin:* `.3em`
